<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeListActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addRecipeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="onAddRecipeButton"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="40dp" />

    <Button
        android:id="@+id/ingredientsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:background="#DFDFDF"
        android:hapticFeedbackEnabled="true"
        android:onClick="onIngredientsButton"
        android:padding="10dp"
        android:text="@string/ingredients_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/recipeListView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/recipeListTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/recipe_list_title"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#C1000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/recipeListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeListTitleText">

        <TextView
            android:id="@+id/titleHeadingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/label_recipe_title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ratingColumnHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:gravity="right"
            android:padding="10dp"
            android:text="@string/label_rating"
            android:textSize="24sp"
            android:visibility="visible"
            tools:visibility="visible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>